# NeuralNetwork

src/: CMakeLists.txt  ImageReader.cpp  ImageReader.h  NeuralNet.cpp  NeuralNet.h  ParallelNet.cpp  ParallelNet.h  parallel_net.cpp
src/layers/: CMakeLists.txt  ConvolutionalLayer.cpp  ConvolutionalLayer.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  OutputLayer.cpp  OutputLayer.h
src/utilities/: CMakeLists.txt  Utilities.cpp  Utilities.h
